--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
         body: "How's it hangin'?",
         icon: '/icon.png',
         timeout: 4000,
-        vibrate:[200,100],
+        vibrate: [200, 100, 200, 100, 200, 100, 200],,
         onClick: function () {
             window.focus();
             this.close();
         }
-    }); </script>
+    }); 
+    </script>
 </head>
 <body>
     
