--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         body: "How's it hangin'?",
         icon: '/icon.png',
         timeout: 4000,
-        vibrate: [200, 100, 200, 100, 200, 100, 200],,
+        vibrate: [200, 100, 200, 100, 200, 100, 200],
         onClick: function () {
             window.focus();
             this.close();
